--- a/CALMAUI/Pages/TareasComponent.razor
+++ b/CALMAUI/Pages/TareasComponent.razor
@@ -1,4 +1,4 @@
-﻿@page "/tareas"
+﻿@page "/tareas/{accion?}/{i?}"
 @inherits TareasComponentBase
 
 <h3>Tareas Calendario  (@if(tareas != null){ @tareas.Count().ToString(); })</h3>
